--- a/limpiar.ipynb
+++ b/limpiar.ipynb
@@ -2,8 +2,278 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f543f7e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importamos librerías\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a8b6b7f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#abrimos el CSV\n",
+    "df = pd.read_csv(\"data/attacks.csv\",encoding = \"ISO-8859-1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "05ed0c3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 25723 entries, 0 to 25722\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Case Number             8702 non-null   object \n",
+      " 1   Date                    6302 non-null   object \n",
+      " 2   Year                    6300 non-null   float64\n",
+      " 3   Type                    6298 non-null   object \n",
+      " 4   Country                 6252 non-null   object \n",
+      " 5   Area                    5847 non-null   object \n",
+      " 6   Location                5762 non-null   object \n",
+      " 7   Activity                5758 non-null   object \n",
+      " 8   Name                    6092 non-null   object \n",
+      " 9   Sex                     5737 non-null   object \n",
+      " 10  Age                     3471 non-null   object \n",
+      " 11  Injury                  6274 non-null   object \n",
+      " 12  Fatal (Y/N)             5763 non-null   object \n",
+      " 13  Time                    2948 non-null   object \n",
+      " 14  Species                 3464 non-null   object \n",
+      " 15  Investigator or Source  6285 non-null   object \n",
+      " 16  pdf                     6302 non-null   object \n",
+      " 17  href formula            6301 non-null   object \n",
+      " 18  href                    6302 non-null   object \n",
+      " 19  Case Number.1           6302 non-null   object \n",
+      " 20  Case Number.2           6302 non-null   object \n",
+      " 21  original order          6309 non-null   float64\n",
+      " 22  Unnamed: 22             1 non-null      object \n",
+      " 23  Unnamed: 23             2 non-null      object \n",
+      "dtypes: float64(2), object(22)\n",
+      "memory usage: 4.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info() #hay nulos por todas partes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8039247d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 8703 entries, 0 to 25722\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Case Number             8702 non-null   object \n",
+      " 1   Date                    6302 non-null   object \n",
+      " 2   Year                    6300 non-null   float64\n",
+      " 3   Type                    6298 non-null   object \n",
+      " 4   Country                 6252 non-null   object \n",
+      " 5   Area                    5847 non-null   object \n",
+      " 6   Location                5762 non-null   object \n",
+      " 7   Activity                5758 non-null   object \n",
+      " 8   Name                    6092 non-null   object \n",
+      " 9   Sex                     5737 non-null   object \n",
+      " 10  Age                     3471 non-null   object \n",
+      " 11  Injury                  6274 non-null   object \n",
+      " 12  Fatal (Y/N)             5763 non-null   object \n",
+      " 13  Time                    2948 non-null   object \n",
+      " 14  Species                 3464 non-null   object \n",
+      " 15  Investigator or Source  6285 non-null   object \n",
+      " 16  pdf                     6302 non-null   object \n",
+      " 17  href formula            6301 non-null   object \n",
+      " 18  href                    6302 non-null   object \n",
+      " 19  Case Number.1           6302 non-null   object \n",
+      " 20  Case Number.2           6302 non-null   object \n",
+      " 21  original order          6309 non-null   float64\n",
+      " 22  Unnamed: 22             1 non-null      object \n",
+      " 23  Unnamed: 23             2 non-null      object \n",
+      "dtypes: float64(2), object(22)\n",
+      "memory usage: 1.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.dropna(how=\"all\", inplace=True)\n",
+    "df.info() #borramos solo los nulos donde todos los registros de una fila son nulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8d71ea25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 8703 entries, 0 to 25722\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Case Number             8702 non-null   object \n",
+      " 1   Date                    6302 non-null   object \n",
+      " 2   Year                    6300 non-null   float64\n",
+      " 3   Type                    6298 non-null   object \n",
+      " 4   Country                 6252 non-null   object \n",
+      " 5   Area                    5847 non-null   object \n",
+      " 6   Location                5762 non-null   object \n",
+      " 7   Activity                5758 non-null   object \n",
+      " 8   Name                    6092 non-null   object \n",
+      " 9   Sex                     5737 non-null   object \n",
+      " 10  Age                     3471 non-null   object \n",
+      " 11  Injury                  6274 non-null   object \n",
+      " 12  Fatal (Y/N)             5763 non-null   object \n",
+      " 13  Time                    2948 non-null   object \n",
+      " 14  Species                 3464 non-null   object \n",
+      " 15  Investigator or Source  6285 non-null   object \n",
+      " 16  pdf                     6302 non-null   object \n",
+      " 17  href formula            6301 non-null   object \n",
+      " 18  href                    6302 non-null   object \n",
+      " 19  Case Number.1           6302 non-null   object \n",
+      " 20  Case Number.2           6302 non-null   object \n",
+      " 21  original order          6309 non-null   float64\n",
+      " 22  Unnamed: 22             1 non-null      object \n",
+      " 23  Unnamed: 23             2 non-null      object \n",
+      "dtypes: float64(2), object(22)\n",
+      "memory usage: 1.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.dropna(how=\"all\", axis=1, inplace=True) #no hay ninguna columna en la que todo sea nan. Algún dato siempre tiene\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "893e84ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "stopped here    1\n",
+       "Name: Unnamed: 22, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Unnamed: 22\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ac6b6ec8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Teramo             1\n",
+       "change filename    1\n",
+       "Name: Unnamed: 23, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Unnamed: 23\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "71250ecd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop([\"Unnamed: 22\", \"Unnamed: 23\"], axis=1, inplace=True) #bottamos las dos columnas donde solo hay 1 o 2 datos, además las columnas no tienen nombre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "85570605",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 8703 entries, 0 to 25722\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Case Number             8702 non-null   object \n",
+      " 1   Date                    6302 non-null   object \n",
+      " 2   Year                    6300 non-null   float64\n",
+      " 3   Type                    6298 non-null   object \n",
+      " 4   Country                 6252 non-null   object \n",
+      " 5   Area                    5847 non-null   object \n",
+      " 6   Location                5762 non-null   object \n",
+      " 7   Activity                5758 non-null   object \n",
+      " 8   Name                    6092 non-null   object \n",
+      " 9   Sex                     5737 non-null   object \n",
+      " 10  Age                     3471 non-null   object \n",
+      " 11  Injury                  6274 non-null   object \n",
+      " 12  Fatal (Y/N)             5763 non-null   object \n",
+      " 13  Time                    2948 non-null   object \n",
+      " 14  Species                 3464 non-null   object \n",
+      " 15  Investigator or Source  6285 non-null   object \n",
+      " 16  pdf                     6302 non-null   object \n",
+      " 17  href formula            6301 non-null   object \n",
+      " 18  href                    6302 non-null   object \n",
+      " 19  Case Number.1           6302 non-null   object \n",
+      " 20  Case Number.2           6302 non-null   object \n",
+      " 21  original order          6309 non-null   float64\n",
+      "dtypes: float64(2), object(20)\n",
+      "memory usage: 1.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68d955c3",
    "metadata": {},
    "outputs": [],
    "source": []
